@@ -395,9 +395,11 @@ class SearchEngine {
 	 * @return array
 	 */
 	public static function defaultNamespaces() {
-		global $wgNamespacesToBeSearchedDefault;
+		global $wgNamespacesToBeSearchedDefault, $wgContentNamespaces;
 
-		return array_keys( $wgNamespacesToBeSearchedDefault, true );
+		return $wgNamespacesToBeSearchedDefault !== false ?
+			array_keys( $wgNamespacesToBeSearchedDefault, true ) :
+			$wgContentNamespaces;
 	}
 
 	/**
