@@ -25,6 +25,7 @@ production.
   contains an array of interwiki prefixes that should be treated as language
   prefixes (i.e. turned into interlanguage links when $wgInterwikiMagic is set
   to true).
+* $wgNamespacesToBeSearchedDefault now defaults to $wgContentNamespaces.
 
 === New features in 1.24 ===
 * Added a new hook, "WhatLinksHereProps", to allow extensions to annotate
